# screenCapturer

./: .gitignore  CMakeLists.txt  README.md  desktopCapturer.cpp  desktopCapturer.h  screenRecorder.cpp
include/: desktopCapturer.h  imageUtils.h  videoEncoder.h  windowUtils.h
src/: desktopCapturer.cpp  imageUtils.cpp  videoEncoder.cpp  windowUtils.cpp
